--- a/css/general.css
+++ b/css/general.css
@@ -159,8 +159,8 @@ img {
 }
 
 .title-primary {
-  font-size: 50px;
-  color: #110f0f;
+  font-size: 36px;
+  color: #141414;
   text-align: center;
   font-weight: bold;
 }
@@ -195,7 +195,7 @@ img {
 }
 
 .title-tertiary {
-  font-size: 23px;
+  font-size: 19px;
   color: #333;
   margin-bottom: 20px;
   margin-top: 10px;
