--- a/css/general.scss
+++ b/css/general.scss
@@ -88,8 +88,8 @@ img {
 }
 
 .title-primary {
-    font-size: 50px;
-    color: rgb(17, 15, 15);
+    font-size: 36px;
+    color: #141414;
     text-align: center;
     font-weight: bold;
 
@@ -119,7 +119,7 @@ img {
 }
 
 .title-tertiary {
-    font-size: 23px;
+    font-size: 19px;
     color: #333;
     margin-bottom: 20px;
     margin-top: 10px;
