--- a/css/header.scss
+++ b/css/header.scss
@@ -8,7 +8,7 @@ header {
     box-sizing: border-box;
 
     @include sm-block {
-        padding: 6vh 0;
+        padding: 70px 0;
         background: #fff;
         min-height: 50vh;
     }
