--- a/css/navbar.css
+++ b/css/navbar.css
@@ -14,6 +14,11 @@
   height: 70px;
 }
 
+.navbar.scrolled {
+  background-color: #fff;
+  border-bottom: 3px solid #000;
+}
+
 .navbar-inner {
   display: -webkit-box;
   display: -ms-flexbox;
