--- a/css/general.css
+++ b/css/general.css
@@ -226,6 +226,20 @@ img {
       flex-wrap: wrap;
 }
 
+.flex-center {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
 .flex-between {
   display: -webkit-box;
   display: -ms-flexbox;
