--- a/css/main.scss
+++ b/css/main.scss
@@ -11,6 +11,13 @@ main {
     }
     .title-primary {
         margin-bottom: 50px;
+
+        @include sm-block {
+            margin-bottom: 30px;
+        }
+        @include sm-block {
+            margin-bottom: 20px;
+        }
     }
 
     .item {
@@ -158,5 +165,122 @@ main {
             text-align: left;
             font-size: 18px;
         }
+    }
+}
+
+.about-us {
+    padding: 80px 0;
+
+    .properties {
+        text-align: center;
+
+        .item {
+            width: 300px;
+
+            @include sm-block {
+                margin-bottom: 20px;
+            }
+
+            .primary-heading {
+                color: #62a0e6;
+                font-size: 48px;
+                font-weight: 700;
+            }
+
+            p {
+                color: #aeaeae;
+                font-size: 18px;
+            }
+        }
+    }
+
+    .aboutus-slider {
+        max-width: 1000px;
+        margin: 0 auto;
+        margin-top: 30px;
+        .swiper-slide {
+            text-align: center;
+        }
+
+        .swiper-button-prev,
+        .swiper-button-next {
+            background: none;
+            width: 50px;
+            height: 50px;
+
+            @include sm-block {
+                width: 30px;
+                height: 30px;
+            }
+        }
+    }
+
+    .info {
+        max-width: 600px;
+        margin: 30px auto;
+        text-align: center;
+        color: #141414;
+        font-size: 18px;
+    }
+
+    .sm-banner {
+        max-width: 750px;
+        margin: 0 auto;
+        margin-top: 50px;
+        border-radius: 10px;
+        padding: 35px 65px;
+        box-shadow: 0 0 90px rgba(0, 0, 0, 0.1),  inset 0 0 0 11px #fff, inset 0 0 0 12px rgba(0, 0, 0, 0.1);
+        position: relative;
+
+        @include sm-block {
+            text-align: center;
+            padding: 30px 10px;
+        }
+
+        p {
+            color: #141414;
+            font-size: 18px;
+        }
+
+        .pencil {
+            position: absolute;
+            top: 50%;
+            right: 20%;
+            transform: translateY(-50%);
+
+            @include sm-block {
+                display: none;
+            }
+        }
+    }
+}
+
+.projects {
+    img {
+        box-shadow: 0 0 10px rgba(#000, .3);
+    }
+
+    .item {
+        box-shadow: none;
+
+        .title {
+            min-height: 59px;
+
+            @include sm-block {
+                min-height: auto;
+                font-size: 20px;
+                margin-bottom: 10px;
+            }
+        }
+
+        &:hover {
+            box-shadow: 0 20px 60px rgba($color: #000000, $alpha: .1);
+        }
+    }
+}
+
+.clients {
+    .swiper-slide {
+        text-align: center;
     }
 }
