--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,12 @@ main {
   padding: 100px 0;
 }
 
+@media screen and (max-width: 768px) {
+  main {
+    padding: 20px 0;
+  }
+}
+
 .presentation {
   margin: 50px 0;
 }
@@ -262,21 +268,6 @@ main {
   text-align: center;
 }
 
-.about-us .aboutus-slider .swiper-button-prev,
-.about-us .aboutus-slider .swiper-button-next {
-  background: none;
-  width: 50px;
-  height: 50px;
-}
-
-@media screen and (max-width: 768px) {
-  .about-us .aboutus-slider .swiper-button-prev,
-  .about-us .aboutus-slider .swiper-button-next {
-    width: 30px;
-    height: 30px;
-  }
-}
-
 .about-us .info {
   max-width: 600px;
   margin: 30px auto;
@@ -351,5 +342,111 @@ main {
 
 .clients .swiper-slide {
   text-align: center;
+}
+
+.clients .swiper-button-prev,
+.clients .swiper-button-next {
+  background: none;
+  width: 50px;
+  height: 50px;
+}
+
+@media screen and (max-width: 768px) {
+  .clients .swiper-button-prev,
+  .clients .swiper-button-next {
+    width: 30px;
+    height: 30px;
+  }
+}
+
+.service-info {
+  background: #fff;
+  -webkit-box-shadow: 0 0 100px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 0 100px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  margin: 50px 0;
+}
+
+.service-info .item {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  word-wrap: break-word;
+  margin-left: 15px;
+  margin-right: 15px;
+  width: calc(25% - 30px);
+  text-align: center;
+  padding: 30px;
+  color: #000000;
+}
+
+@media screen and (max-width: 768px) {
+  .service-info .item {
+    width: calc(50% - 30px);
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .service-info .item {
+    width: calc(100% - 30px);
+  }
+}
+
+.service-info .item .heading {
+  font-size: 24px;
+  font-weight: bold;
+}
+
+@media screen and (max-width: 1024px) {
+  .service-info .item .heading {
+    font-size: 22px;
+  }
+}
+
+.service-info .item .icon {
+  margin: 20px 0;
+  color: #62a0e6;
+  font-size: 45px;
+}
+
+.service-info .item .text {
+  font-size: 18px;
+}
+
+@media screen and (max-width: 1024px) {
+  .service-info .item .text {
+    font-size: 17px;
+  }
+}
+
+.with-hand {
+  position: relative;
+}
+
+.with-hand .hand {
+  position: relative;
+  z-index: 10;
+}
+
+.with-hand .hand img {
+  position: absolute;
+  bottom: 100%;
+  right: 0%;
+}
+
+@media screen and (max-width: 1024px) {
+  .with-hand .hand img {
+    max-width: 400px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .with-hand .hand {
+    display: none;
+  }
+}
+
+.with-hand .service-info {
+  position: relative;
+  z-index: 50;
 }
 /*# sourceMappingURL=main.css.map */
