--- a/css/main.scss
+++ b/css/main.scss
@@ -1,7 +1,9 @@
 @import './smart-grid';
+@import './mixins';
 
 main {
     padding: 100px 0;
+    color: #141414;
 
     @include sm-block {
         padding: 20px 0;
@@ -357,5 +359,139 @@ main {
     .service-info {
         position: relative;
         z-index: 50;
+    }
+}
+
+.slider-big {
+    padding: 40px 0;
+}
+
+.advantages {
+    @include content-padding();
+
+    .row {
+        justify-content: space-around;
+    }
+
+    .item {
+        @include col();
+        @include size(6);
+        @include size-sm(12);
+        @include size-xs(24);
+        text-align: center;
+        margin-bottom: 30px;
+        max-width: 300px;
+    }
+
+    .item {
+        .icon {
+            margin-bottom: 30px;
+        }
+
+        .heading {
+            font-size: 20px;
+            font-weight: 700;
+            margin-bottom: 15px;
+        }
+
+        .text {
+            color: #838282;
+            font-size: 16px;
+            line-height: 1.4;
+        }
+    }
+}
+
+.banner-accordion {
+    @include content-padding();
+    background: url(../imgs/banner-bg.png) no-repeat center center;
+    background-size: cover;
+    box-shadow: inset 0 0 0 3000px rgba($color: #000000, $alpha: .6);
+    color: #fff;
+}
+
+.accordion {
+    max-width: 700px;
+    margin: 0 auto;
+    .item {
+        margin: 20px 0;
+        .checkbox {
+            display: none;
+            visibility: hidden;
+        }
+        .label {
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
+            text-align: center;
+            cursor: pointer;
+
+            -ms-user-select: none;
+            -moz-user-select: none;
+            -khtml-user-select: none;
+            -webkit-user-select: none;
+        }
+
+        .check-icon {
+            width: 50px;
+            height: 50px;
+            margin-right: 50px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-radius: 5px;
+            background-color: #62a0e6;
+            font-size: 36px;
+            flex-shrink: 0;
+            transition: all .2s ease;
+
+            @include xs-block {
+                margin-right: 10px;
+                width: 40px;
+                height: 40px;
+                font-size: 30px;
+            }
+
+            span {
+                transition: all .2s ease;
+            }
+        }
+
+        .check-title {
+            flex-grow: 1;
+            font-size: 22px;
+
+            @include md-block {
+                font-size: 19px;
+            }
+
+            @include xs-block {
+                font-size: 15px;
+            }
+        }
+
+        .text {
+            text-align: center;
+            font-size: 0;
+            opacity: 0;
+            transition: all .1s ease;
+            padding: 0;
+            letter-spacing: 1px;
+        }
+
+        .checkbox:checked ~ .text {
+            font-size: 16px;
+            padding: 30px 0;
+            opacity: 1;
+        }
+
+        .checkbox:checked ~ .label .check-icon {
+            background-color: #dd5f5f;
+        }
+
+        .checkbox:checked ~ .label .check-icon span {
+            transform: rotate(45deg);
+        }
+
     }
 }
