--- a/css/general.css
+++ b/css/general.css
@@ -404,6 +404,12 @@ button {
   text-decoration: underline;
 }
 
+.text-secondary {
+  color: #dd5f5f;
+  font-weight: 600;
+  text-decoration: underline;
+}
+
 .btn-primary {
   display: inline-block;
   border-radius: 5px;
@@ -411,6 +417,7 @@ button {
   font-weight: 400;
   line-height: 1.2;
   padding: 28px 50px;
+  border: none;
   border-bottom: 4px solid;
   background-image: -webkit-gradient(linear, left bottom, left top, from(#5089c9), to(#93c4fc));
   background-image: linear-gradient(to top, #5089c9 0%, #93c4fc 100%);
@@ -437,6 +444,7 @@ button {
   font-weight: 400;
   line-height: 1.2;
   padding: 28px 50px;
+  border: none;
   border-bottom: 4px solid;
   background-image: -webkit-gradient(linear, left bottom, left top, from(#b0b0b0), to(#eaeaea));
   background-image: linear-gradient(to top, #b0b0b0 0%, #eaeaea 100%);
@@ -453,6 +461,167 @@ button {
 @media screen and (max-width: 576px) {
   .btn-secondary {
     padding: 9px 11px;
+  }
+}
+
+.modal {
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100vh;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  z-index: 5;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  visibility: hidden;
+}
+
+.modal-background {
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100vh;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  z-index: 11;
+  background-color: rgba(0, 0, 0, 0.5);
+  -webkit-transition: all 200ms ease-in-out;
+  transition: all 200ms ease-in-out;
+}
+
+.modal-content {
+  position: relative;
+  width: 500px;
+  max-width: 80%;
+  background-color: #fff;
+  z-index: 111;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  text-align: center;
+  padding: 40px;
+  -webkit-transition: all 150ms ease-in-out;
+  transition: all 150ms ease-in-out;
+  border-radius: 10px;
+}
+
+.modal-content .done {
+  display: none;
+}
+
+.modal-content .done img {
+  width: 150px;
+}
+
+.modal-content.done .form {
+  display: none;
+}
+
+.modal-content.done .done {
+  display: block;
+}
+
+.modal-heading {
+  font-size: 30px;
+  font-weight: 300;
+  line-height: 1.4em;
+  margin-bottom: 20px;
+}
+
+.modal-input-name, .modal-input-phone {
+  width: 100%;
+  height: 50px;
+  border: 1px solid #c6c6c6;
+  border-radius: 3px;
+  font-size: 18px;
+  color: #3b3b3b;
+  padding: 0 22px;
+  margin-bottom: 30px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.modal-input-name:focus, .modal-input-phone:focus {
+  outline: none;
+}
+
+.modal .close-btn {
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  font-size: 40px;
+  font-weight: 700;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+  -webkit-transition: text-shadow .2s ease-in-out;
+  transition: text-shadow .2s ease-in-out;
+  cursor: pointer;
+  text-shadow: 0 0 0rem transparent;
+}
+
+.modal .close-btn:hover {
+  text-shadow: 0 0 15px #3b3b3b;
+}
+
+.modal-content {
+  -webkit-transform: translateY(-8rem) scale(0.9);
+          transform: translateY(-8rem) scale(0.9);
+  opacity: .4;
+}
+
+.modal-background {
+  opacity: .3;
+}
+
+.modal.active .modal-content {
+  -webkit-transform: translateY(0) scale(1);
+          transform: translateY(0) scale(1);
+  opacity: 1;
+}
+
+.modal.active .modal-background {
+  opacity: 1;
+}
+
+.modal.active {
+  visibility: visible;
+}
+
+@media screen and (max-width: 576px) {
+  .modal-content {
+    max-width: 85%;
+    padding: 50px 20px;
+  }
+  .modal-heading {
+    font-size: 21px;
+  }
+  .modal-input-name, .modal-input-phone {
+    width: 100%;
+    height: 40px;
+    font-size: 16px;
+    margin-bottom: 20px;
+  }
+  .modal-submit {
+    height: 50px;
+    font-size: 20px;
+  }
+  .modal .close-btn {
+    top: 0;
+    font-size: 40px;
+    font-weight: 500;
   }
 }
 /*# sourceMappingURL=general.css.map */
